[CDRB-2891] Add finish transaction api
